--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,10 @@
         android:theme="@style/Theme.LastLastRecipe"
         tools:targetApi="31">
         <activity
+            android:name=".edit_profile"
+            android:exported="true" />
+
+        <activity
             android:name=".RecipeNew"
             android:exported="true" >
 
